--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body id="bd">
+    <h1>Change Background & Text Color</h1>
     <div id="1b" onclick="CBG('green')"></div>
     <div id="2b" onclick="CBG('purple')"></div>
     <div id="3b" onclick="CBG('black')"></div>
